--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
+<!doctype html>
+<html>
+<body>
+    <main>
 This is Opusmarta's domain!
+</main>
+<footer>
 <a rel=me" href="https://oslo.town/@opusmarta">Mastodon</a>
+</footer>
+</body>
+</html>
