--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!doctype html>
 <html>
 <body>
-    <main>
+<main>
+<section>
 This is Opusmarta's domain!
+</section>
 </main>
 <footer>
 <a rel=me" href="https://oslo.town/@opusmarta">Mastodon</a>
