--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ This is Opusmarta's domain!
 </section>
 </main>
 <footer>
-<a rel=me" href="https://oslo.town/@opusmarta">Mastodon</a>
+<a rel="me" href="https://oslo.town/@opusmarta">Mastodon</a>
 </footer>
 </body>
 </html>
